2008-10-29  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/icalbouncer.py:

	Fix a typo described in #1173. Use UTC time instead of local time for
	comparisions (the attempt at using local time was broken anyway, as it
	caused an import error).

2008-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_common_eventcalendar.py:
	  Add a test that shows the length of an event spanning a
	  daylight savings time change is correct.
	  Remove an assert that fails only during winter time due to
	  a possible bug in python-iCalendar; see
	  https://thomas.apestaart.org/thomas/trac/browser/tests/icalendar/

2008-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/messages.py:
	  also log debug if it's there.
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/combiners/switch/switch.py:
	* flumotion/component/bouncers/icalbouncer.py:
	  Use calendar to get event instances.
	  Change to use eventInstanceStarted/Ended callbacks.
	* flumotion/component/base/scheduler.py:
	  Based on the mtime of a previous recording, decide whether to
	  overwrite (if it was part of a previous event) or change filename
	  (if it is part of the current event).
	  Add a simple duration check to the rescheduling, and complain
	  if it is more than half a second.
	  (It used to be 7 seconds for the simple urgent.ics test case.)
	  Compare old and new active events only by content, since
	  start and end times might have changed of the currently active
	  event.
	  Add self._calendar, getCalendar and setCalendar.
	  Remove removeEvent, calendars always keep their events and
	  schedule with instances.
	  Remove replaceEvents.
	  Change subscribe to take functions that notify about instances
	  starting and ending, instead of events.
	  Change the core, getNextEvent, to a function that gets the next
	  points, so that all points at that time get handled, not just
	  one.